--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -286,6 +286,12 @@
 /* Chat entry that can be tapped to add the contact to address book */
 "chat.event.tap.to.add.contact" = "انقر لإضافة %@ إلى دفتر عناوينك";
 
+/* Message text shown with the user who changed a groups content expiry settings */
+"chat.group.event.expiry.changed" = "غيَّر %1$@ مدة صلاحية محتوى المجموعة لتصبح %2$@";
+
+/* Message text shown when you change a groups content expiry settings */
+"chat.group.event.expiry.changed.you" = "لقد غيَّرت مدة صلاحية محتوى المجموعة ليصبح %1@";
+
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@  انضم إلى المجموعة من خلال رابط الدعوة";
 
@@ -297,6 +303,15 @@
 
 /* Message text shown when you leave a group */
 "chat.group.event.member.left.you" = "أنت غادرت";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 ساعة";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 يومًا";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "مطلقًا";
 
 /* Action label for adding members to a group */
 "chat.group.info.add.members" = "إضافة أعضاء";
@@ -312,6 +327,12 @@
 
 /* Text for menu option of demoting a group member */
 "chat.group.info.demote" = "إزالة من منصب مشرف";
+
+/* Error message when changing group expiry fails */
+"chat.group.info.expiry.set.error" = "تعذّر تحديث مدة انتهاء صلاحية المحتوى";
+
+/* Title of groups info section that controls when group content expires */
+"chat.group.info.expiry.title" = "مدة انتهاء صلاحة المحتوى";
 
 /* Action label for leaving group */
 "chat.group.info.leave.group" = "مغادرة المجموعة";
@@ -469,6 +490,12 @@
 /* Title for alert when closing the post composer with a voice note */
 "composer.deletevoicenote.title" = "تجاهل المنشور؟";
 
+/* Share to all contacts */
+"composer.destination.contactsShare" = "جهات اتصالي";
+
+/* Label above the list with whom you share */
+"composer.destinations.label" = "مشاركة مع";
+
 /* Label shown when only single media item selected */
 "composer.label.more" = "إضافة المزيد";
 
@@ -532,6 +559,9 @@
 /* Alert message telling the user to try creating the group again after an error */
 "create.group.error" = "حدث خطأ أثناء إنشاء المجموعة، يُرجى إعادة المحاولة";
 
+/* Title for form field selecting group content expiry time */
+"create.group.expire.content" = "انتهاء صلاحية المحتوى";
+
 /* Placeholder text shown inside the group name input box when it's empty */
 "create.group.name.placeholder" = "تسمية المجموعة";
 
@@ -543,6 +573,9 @@
 
 /* Body of the bottom sheet that is presented only once to explain the moments feature. */
 "describing.moments" = "يمكنك إظهار لحظات أصدقائك بمشاركة اللحظة الخاصة بك. تتميز اللحظات بأنها مؤقتة، وتختفي بعد عرضها مرة واحدة.";
+
+/* Title that indicates that someone downloaded media from a post. */
+"downloaded.title" = "تم التنزيل";
 
 /* link, tapping on which launched the flow to edit blocked contacts */
 "edit.blocked" = "تعديل";
@@ -1087,6 +1120,12 @@
 /* Confirmation prompt in media composer. */
 "media.discard.confirmation" = "هل تريد تجاهل تعديلاتك؟";
 
+/* Button that, when pressed, saves all the post's media to the user's camera roll */
+"media.download.all" = "تنزيل الكل";
+
+/* Button that, when pressed, saves the post's media to the user's camera roll. Singular version for media.save.all */
+"media.download.singular" = "تنزيل";
+
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.mic.access.request.body" = "لتسجيل الفيديوهات مع تضمين الصوت، يحتاج هالوآب إلى إذن الوصول إلى الميكروفون. لتمكين الوصول، انقر على \"الإعدادات\" وشغِّل الميكروفون.";
 
@@ -1096,14 +1135,8 @@
 /* Error text displayed in post composer when some of the media selected couldn't be sent. */
 "media.prepare.failed.n.count" = "media.prepare.failed.n.count";
 
-/* Button that, when pressed, saves all the post's media to the user's camera roll */
-"media.save.all" = "حفظ الكل في المعرض؟";
-
-/* Button that, when pressed, saves the post's media to the user's camera roll. Singular version for media.save.all */
-"media.save.all.singular" = "حفظ ملف الوسائط في المعرض";
-
-/* Button that lets the user save the current media displayed to their camera roll */
-"media.save.camera.roll" = "الحفظ في المعرض";
+/* Title when changing media order */
+"media.reorder.title" = "تغيير الترتيب";
 
 /* Alert title telling the user that the photos couldn't be saved due to camera role privacy settings */
 "media.save.needs.permissions" = "أذونات الوصول إلى الصور مطلوبة";
@@ -1240,6 +1273,12 @@
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ قبل دعوتك للانضمام إلى هالوآب 🎉";
 
+/* New message notification text when message is a location. */
+"notification.location" = "📍 موقع";
+
+/* Push notification for a reaction to message */
+"notification.message.reaction" = "تفاعل %@ مع إحدى الرسائل";
+
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "لحظة جديدة";
 
@@ -1351,6 +1390,9 @@
 /* Message shown only limited access to media. */
 "picker.access.limited.message" = "لقد منحت هالوآب إذن الوصول إلى عدد محدد من الصور والفيديوهات.";
 
+/* Title for a screen that displays items from the last 24 hours. */
+"picker.last.24.hours.title" = "آخر 24 ساعة";
+
 /* Alert message in media picker when unable to load media file. */
 "picker.media.fail.message" = "يُرجى إعادة المحاولة أو اختيار صورة أخرى أو فيديو آخر.";
 
@@ -1374,6 +1416,9 @@
 
 /* Title for the picker screen. */
 "post.controller.picker.title" = "منشور جديد";
+
+/* Body of alert indicating that a post's expiration does not match that set on a group */
+"post.expiration.mismatch" = "ستنتهي صلاحية هذا المنشور في %1$@، بينما تم ضبط انتهاء صلاحية محتوى المجموعة على %2$@.";
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "تم حذف هذا المنشور";
