--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -574,6 +574,9 @@
 /* Body of the bottom sheet that is presented only once to explain the moments feature. */
 "describing.moments" = "Ontgrendel momenten van je vrienden door je eigen moment te delen. Momenten zijn tijdelijk en verdwijnen nadat je ze één keer hebt bekeken";
 
+/* Title that indicates that someone downloaded media from a post. */
+"downloaded.title" = "Gedownload";
+
 /* link, tapping on which launched the flow to edit blocked contacts */
 "edit.blocked" = "Bewerken";
 
@@ -1117,6 +1120,12 @@
 /* Confirmation prompt in media composer. */
 "media.discard.confirmation" = "Wil je je wijzigingen weggooien?";
 
+/* Button that, when pressed, saves all the post's media to the user's camera roll */
+"media.download.all" = "Alles Downloaden";
+
+/* Button that, when pressed, saves the post's media to the user's camera roll. Singular version for media.save.all */
+"media.download.singular" = "Downloaden";
+
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.mic.access.request.body" = "Om video's met geluid op te nemen, heeft HalloApp toegang nodig tot de microfoon. Om toegang te geven, tik op Instellingen en zet Microfoon aan.";
 
@@ -1126,14 +1135,8 @@
 /* Error text displayed in post composer when some of the media selected couldn't be sent. */
 "media.prepare.failed.n.count" = "media.prepare.failed.n.count";
 
-/* Button that, when pressed, saves all the post's media to the user's camera roll */
-"media.save.all" = "Alles Opslaan Op Filmrol";
-
-/* Button that, when pressed, saves the post's media to the user's camera roll. Singular version for media.save.all */
-"media.save.all.singular" = "Media Opslaan Op Filmrol";
-
-/* Button that lets the user save the current media displayed to their camera roll */
-"media.save.camera.roll" = "Opslaan Op Filmrol";
+/* Title when changing media order */
+"media.reorder.title" = "Volgorde Wijzigen";
 
 /* Alert title telling the user that the photos couldn't be saved due to camera role privacy settings */
 "media.save.needs.permissions" = "Toegang tot foto's nodig";
@@ -1261,6 +1264,9 @@
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Je bent geen deelnemer meer van deze groep";
 
+/* Push notification for a comment to message */
+"notification.comment.reaction" = "Reageerde met %@ op een reactie";
+
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Heeft gereageerd: %@";
 
@@ -1269,6 +1275,9 @@
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ heeft je uitnodiging voor HalloApp geaccepteerd 🎉";
+
+/* New message notification text when message is a location. */
+"notification.location" = "📍 Locatie";
 
 /* Push notification for a reaction to message */
 "notification.message.reaction" = "Reageerde met %@ op een bericht";
@@ -1412,7 +1421,7 @@
 "post.controller.picker.title" = "Nieuwe Post";
 
 /* Body of alert indicating that a post's expiration does not match that set on a group */
-"post.expiration.mismatch" = "Deze post zal verlopen op %1$@, terwijl de groepsinstelling %2$@ aangeeft.";
+"post.expiration.mismatch" = "Deze post zal verlopen in %1$@, terwijl de verlooptijd van de groepsinhoud staat ingesteld op %2$@.";
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Deze post is verwijderd";
