--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -286,6 +286,12 @@
 /* Chat entry that can be tapped to add the contact to address book */
 "chat.event.tap.to.add.contact" = "Toque para adicionar %@ ao seu catálogo de endereços";
 
+/* Message text shown with the user who changed a groups content expiry settings */
+"chat.group.event.expiry.changed" = "%1$@ alterou a expiração do conteúdo do grupo para %2$@";
+
+/* Message text shown when you change a groups content expiry settings */
+"chat.group.event.expiry.changed.you" = "Você alterou a expiração do conteúdo do grupo para %1@";
+
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ entrou no grupo através do link de convite de grupo";
 
@@ -297,6 +303,15 @@
 
 /* Message text shown when you leave a group */
 "chat.group.event.member.left.you" = "Saiu";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 horas";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 dias";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "Nunca";
 
 /* Action label for adding members to a group */
 "chat.group.info.add.members" = "Adicionar membros";
@@ -312,6 +327,12 @@
 
 /* Text for menu option of demoting a group member */
 "chat.group.info.demote" = "Despromover de administrador";
+
+/* Error message when changing group expiry fails */
+"chat.group.info.expiry.set.error" = "Falha ao atualizar a expiração do conteúdo";
+
+/* Title of groups info section that controls when group content expires */
+"chat.group.info.expiry.title" = "Expiração do conteúdo";
 
 /* Action label for leaving group */
 "chat.group.info.leave.group" = "Sair do grupo";
@@ -469,6 +490,12 @@
 /* Title for alert when closing the post composer with a voice note */
 "composer.deletevoicenote.title" = "Descartar Postagem?";
 
+/* Share to all contacts */
+"composer.destination.contactsShare" = "Meus Contatos";
+
+/* Label above the list with whom you share */
+"composer.destinations.label" = "Partilhar com";
+
 /* Label shown when only single media item selected */
 "composer.label.more" = "Adicionar mais";
 
@@ -532,6 +559,9 @@
 /* Alert message telling the user to try creating the group again after an error */
 "create.group.error" = "Ocorreu um erro ao criar o grupo. Por favor, tente novamente";
 
+/* Title for form field selecting group content expiry time */
+"create.group.expire.content" = "Expirar conteúdo";
+
 /* Placeholder text shown inside the group name input box when it's empty */
 "create.group.name.placeholder" = "Dê um nome ao seu grupo";
 
@@ -543,6 +573,9 @@
 
 /* Body of the bottom sheet that is presented only once to explain the moments feature. */
 "describing.moments" = "Desbloqueie os momentos de seus amigos compartilhando os seus. Os momentos são casuais, eles desaparecem depois que você os vê uma vez.";
+
+/* Title that indicates that someone downloaded media from a post. */
+"downloaded.title" = "Baixado";
 
 /* link, tapping on which launched the flow to edit blocked contacts */
 "edit.blocked" = "Editar";
@@ -1087,6 +1120,12 @@
 /* Confirmation prompt in media composer. */
 "media.discard.confirmation" = "Gostaria de descartar as suas edições?";
 
+/* Button that, when pressed, saves all the post's media to the user's camera roll */
+"media.download.all" = "Baixar todos";
+
+/* Button that, when pressed, saves the post's media to the user's camera roll. Singular version for media.save.all */
+"media.download.singular" = "Download";
+
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.mic.access.request.body" = "Para gravar vídeos com som, o HalloApp precisa de acesso ao microfone. Para habilitar o acesso, clique em Configurações e ligue o Microfone.";
 
@@ -1096,14 +1135,8 @@
 /* Error text displayed in post composer when some of the media selected couldn't be sent. */
 "media.prepare.failed.n.count" = "preparação.mídia.falhou.n.contagem";
 
-/* Button that, when pressed, saves all the post's media to the user's camera roll */
-"media.save.all" = "Guardar tudo no rolo da câmara";
-
-/* Button that, when pressed, saves the post's media to the user's camera roll. Singular version for media.save.all */
-"media.save.all.singular" = "Guardar média no rolo da câmara";
-
-/* Button that lets the user save the current media displayed to their camera roll */
-"media.save.camera.roll" = "Guardar no rolo da câmara";
+/* Title when changing media order */
+"media.reorder.title" = "Mudar o pedido";
 
 /* Alert title telling the user that the photos couldn't be saved due to camera role privacy settings */
 "media.save.needs.permissions" = "Precisa de permissões para fotos";
@@ -1231,6 +1264,9 @@
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Já não está neste grupo";
 
+/* Push notification for a comment to message */
+"notification.comment.reaction" = "Reagiu %@ a um comentário";
+
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Comentou: %@";
 
@@ -1239,6 +1275,9 @@
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ acabou de aceitar o seu convite para se juntar ao HalloApp 🎉";
+
+/* New message notification text when message is a location. */
+"notification.location" = "📍 Localização";
 
 /* Push notification for a reaction to message */
 "notification.message.reaction" = "Reagiu %@ a uma mensagem";
@@ -1354,6 +1393,9 @@
 /* Message shown only limited access to media. */
 "picker.access.limited.message" = "Concedeu ao HalloApp acesso a um número selecionado de fotos e vídeos.";
 
+/* Title for a screen that displays items from the last 24 hours. */
+"picker.last.24.hours.title" = "Últimas 24 horas";
+
 /* Alert message in media picker when unable to load media file. */
 "picker.media.fail.message" = "Por favor, tente novamente ou selecione uma foto ou vídeo diferente";
 
@@ -1377,6 +1419,9 @@
 
 /* Title for the picker screen. */
 "post.controller.picker.title" = "Nova Publicação";
+
+/* Body of alert indicating that a post's expiration does not match that set on a group */
+"post.expiration.mismatch" = "Esta postagem expira em %1$@, enquanto a expiração do conteúdo do grupo está definida como %2$@.";
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Esta publicaçāo foi removida";
