--- a/Notification Service Extension/ar.lproj/Localizable.strings
+++ b/Notification Service Extension/ar.lproj/Localizable.strings
@@ -70,6 +70,15 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "تحديث";
 
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 ساعة";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 يومًا";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "مطلقًا";
+
 /* Alert message when missing microphone access */
 "chat.mic.access.denied.message" = "لتمكين تسجيل الصوت، يُرجى النقر على الإعدادات ثم تفعيل الميكروفون";
 
@@ -135,6 +144,12 @@
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ قبل دعوتك للانضمام إلى هالوآب 🎉";
+
+/* New message notification text when message is a location. */
+"notification.location" = "📍 موقع";
+
+/* Push notification for a reaction to message */
+"notification.message.reaction" = "تفاعل %@ مع إحدى الرسائل";
 
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "لحظة جديدة";
