--- a/Share Extension/es.lproj/Localizable.strings
+++ b/Share Extension/es.lproj/Localizable.strings
@@ -70,6 +70,15 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Actualizar";
 
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 horas";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 días";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "Nunca";
+
 /* Alert message when missing microphone access */
 "chat.mic.access.denied.message" = "Para poder grabar audio, por favor ve a Configuración y enciende el micrófono";
 
