--- a/Share Extension/id.lproj/Localizable.strings
+++ b/Share Extension/id.lproj/Localizable.strings
@@ -70,6 +70,15 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Perbarui";
 
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 Jam";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 Hari";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "Jangan Pernah";
+
 /* Alert message when missing microphone access */
 "chat.mic.access.denied.message" = "Untuk mengaktifkan rekaman audio, silakan ketuk Pengaturan lalu nyalakan Mikrofon";
 
