--- a/Share Extension/pt.lproj/Localizable.strings
+++ b/Share Extension/pt.lproj/Localizable.strings
@@ -70,6 +70,15 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Atualizar";
 
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 horas";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 dias";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "Nunca";
+
 /* Alert message when missing microphone access */
 "chat.mic.access.denied.message" = "Para habilitar a gravação de áudio, toque em Configurações e ligue o microfone";
 
